# Daecheol-Im

./: README.md
Django_prac/likelion13/: pyproject.toml
Django_prac/likelion13/accounts/migrations/: 0001_initial.py
Django_prac/likelion13/config/: custom_exception_handler.py  permissions.py  settings.py  urls.py
Django_prac/likelion13/posts/: admin.py  logging_middleware.py  models.py  serializers.py  urls.py  views.py
Django_prac/likelion13/posts/migrations/: 0001_initial.py  0002_alter_post_status.py  0003_category_post_categories_comment.py  0004_remove_category_id_remove_comment_id_and_more.py  0005_post_password.py
Toy_project/: pyproject.toml
Toy_project/accounts/: models.py
Toy_project/accounts/migrations/: 0001_initial.py
Toy_project/config/: settings.py
Toy_project/posts/: models.py  urls.py  views.py
Toy_project/posts/migrations/: 0001_initial.py  0002_remove_post_status_remove_post_user_post_name_and_more.py
